<resources>
    <string name="app_name">TmDB-App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_nowplaying">This is NowPlaying Fragment</string>
    <string name="this_is_upcoming_fragment">This is UpComing Fragment</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="overview">Overview</string>
    <string name="facts">Facts</string>
    <string name="status">Status</string>
    <string name="original_language">Original Language</string>
    <string name="release_date">Release Date</string>
    <string name="released">Released</string>
</resources>
