<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.satish.tmdb_app.activities.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overview_card"
            android:orientation="vertical"
            android:padding="@dimen/padding_16dp"
            >
            <TextView
                android:id="@+id/dOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:paddingBottom="10dp"
                />
            <TextView
                android:id="@+id/details_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_below="@+id/dOverview"
                android:textColor="@color/colorGreyLight"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/facts_paddingTop"
            android:padding="@dimen/padding_16dp"
            android:background="@drawable/facts"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facts"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreyLight"
                android:textSize="15sp"
                android:text="@string/released"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_language"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/original_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreyLight"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreyLight"
                android:textSize="15sp"
                />

        </LinearLayout>
    </LinearLayout>
<!---->
</android.support.v4.widget.NestedScrollView>
